--- a/octopus/client/octopus.service
+++ b/octopus/client/octopus.service
@@ -1,8 +1,8 @@
 [Unit]
-Description=Foo
+Description=Octopus Client
 
 [Service]
-ExecStart=python3 ~/errbot-venv/errbot-root/plugins/octopus/client/start_client_service
+ExecStart=/home/morty/errbot-venv/errbot-root/plugins/octopus/client/start_client_service
 
 [Install]
 WantedBy=multi-user.target
