--- a/octopus/client/octopus.service
+++ b/octopus/client/octopus.service
@@ -1,8 +1,11 @@
 [Unit]
-Description=Octopus Client
+Description=Start Errbot chatbot
+After=network.service
 
 [Service]
-ExecStart=/home/morty/errbot-venv/errbot-root/plugins/octopus/client/start_client_service
-
-[Install]
-WantedBy=multi-user.target
+Environment="LC_ALL=en_US.UTF-8"
+ExecStart=/home/morty/errbot-venv/bin/errbot --config /home/morty/errbot-venv/errbot-root/config.py
+WorkingDirectory=/home/morty/errbot-venv/
+User=morty
+Restart=always
+KillSignal=SIGINT
