--- a/slackbot.service
+++ b/slackbot.service
@@ -1,8 +1,11 @@
-[Unit]
-Description=Slackbot
+Unit]
+Description=Start Errbot chatbot
+After=network.service
 
 [Service]
-ExecStart=/home/morty/errbot-venv/errbot-root/start_bot
-
-[Install]
-WantedBy=multi-user.target
+Environment="LC_ALL=en_US.UTF-8"
+ExecStart=/home/morty/errbot-venv/bin/errbot --config /home/morty/errbot-venv/errbot-root/config.py
+WorkingDirectory=/home/morty/errbot-venv/
+User=morty
+Restart=always
+KillSignal=SIGINT
